minor alignment fix

--- a/index.css
+++ b/index.css
@@ -111,6 +111,7 @@ nav a:hover {
     background-position: center;
     margin-bottom: 0;
 	flex-direction: column;
+    text-align: center;
 }
 
 #midway-banner {
